infra/k8s/dev/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-svc
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        # rewrite-target: /$1 -> /api/bill/v1.0/user/me -> /v1.0/user/me

spec:
    ingressClassName: nginx
    rules:
        - host: billsplit.app
          http:
              paths:
                  - path: /api/main/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: internal-svc
                            port:
                                number: 9069
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: client-svc
                            port:
                            number: 3000
